--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardListFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardListFrm.css
@@ -66,6 +66,11 @@
             margin: 0px auto;
         }
 
+	/* 검색*/
+      .container  .searching {
+            display: flex;
+            justify-content: center;
+        }
         
         .container .btnGrp #writeBtn{
             grid-column: 8/9;
