--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyFrm.css
@@ -37,50 +37,50 @@
 
 
 
-        #writeFrm {
+        #replyFrm {
             min-width: 400px;
             margin: 50px;
         }
 
 
-        #writeFrm * {
+        #replyFrm * {
             box-sizing: border-box;
         }
 
-        #writeFrm>ul {
+        #replyFrm>ul {
             width: 80%;
             margin: 0 auto;
             padding: 0px;
         }
 
 
-        #writeFrm>ul li {
+        #replyFrm>ul li {
             width: 100%;
             display: grid;
             grid-template-columns: 20% 1fr;
         }
 
-        #writeFrm>ul .selectGrp {
+        #replyFrm>ul .selectGrp {
             width: 100%;
             display: grid;
             grid-template-columns: 20% 20% 1fr;
         }
 
-        #writeFrm>ul .selectGrp>select {
+        #replyFrm>ul .selectGrp>select {
             margin-right: 5px;
         }
 
-        #writeFrm>ul .btnGrp {
+        #replyFrm>ul .btnGrp {
             display: flex;
             justify-content: center;
         }
 
-        #writeFrm>ul .btnGrp button {
+        #replyFrm>ul .btnGrp button {
             width: auto;
         }
 
 
-        #writeFrm>ul textarea {
+        #replyFrm>ul textarea {
             grid-column: 1/3;
             border-collapse: collapse;
         }
