저장하기에 데이터 옮기는것 까지

--- a/maintest/src/main/webapp/WEB-INF/resources/css/packinglist/packingList.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/packinglist/packingList.css
@@ -58,4 +58,15 @@ input[type="text"]{
 div[selected="true"]{
 	text-decoration:line-through;
 }
+.edit_number {
+    display: inline-block;
+    width: 13px;
+    font-size: 0;
+    line-height: 0;
+    height: 19px;
+    vertical-align: middle;
+}
 
+.tab_menu_btn >ul>li>div{
+	display:flex;
+}
