--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteFrm.css
@@ -78,9 +78,18 @@
         #writeFrm>ul .btnGrp button {
             width: auto;
         }
-
-
+	
         #writeFrm>ul textarea {
             grid-column: 1/3;
             border-collapse: collapse;
         }
+        
+        #writeFrm  #files{
+        display:none;
+        }
+        
+          #writeFrm .dragOver{
+    		border = '1px solid blue';
+        backgroundColor= skyblue;
+        opacity : 0.3;        				
+          }
