--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyFrm.css
@@ -72,7 +72,7 @@
 
         #replyFrm>ul .btnGrp {
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
         }
 
         #replyFrm>ul .btnGrp button {
