--- a/maintest/src/main/webapp/WEB-INF/resources/css/admin/admin.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/admin/admin.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 
-ul {
+#content ul {
 	padding: 0;
 	margin: 0;
 }
 
-li {
+#content li {
 	list-style: none;
 }
 
@@ -14,6 +14,11 @@ li {
 	height: 100%;
 	min-height: 600px;
 	overflow-y: scroll;
+	border-right: 1px solid black;
+}
+
+#icategory_set_box {
+	border-right: 1px solid black;
 }
 
 .b_sidebar button {
@@ -24,6 +29,10 @@ li {
 	background-color: white;
 	border: 0px white solid;
 	outline: 0;
+}
+
+.b_listBtn {
+	display: flex;
 }
 
 .b_listBtn input {
@@ -68,7 +77,7 @@ li {
 }
 
 .btype_input_box {
-	text-align: center;
+	text-align: left;
 }
 
 .b_content tr {
@@ -100,6 +109,7 @@ li {
 }
 
 .actionBtn {
+	margin: auto;
 	width: 600px;
 	margin-top: 20px;
 	text-align: center;
@@ -132,7 +142,7 @@ li {
 }
 
 .sub_input {
-	width: 200px;
+	width: 250px;
 }
 
 .sub_input_box {
