--- a/maintest/src/main/webapp/WEB-INF/resources/css/admin/admin.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/admin/admin.css
@@ -45,6 +45,8 @@
 	border-collapse: collapse;
 	display: flex;
 	margin: auto;
+	border-radius: 3px;
+	box-shadow: 1px 1px 1px 1px grey;
 }
 
 .b_sidebar {
