--- a/maintest/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/main.css
@@ -45,7 +45,7 @@ i.navbar_toggleBtn {
 .main_img {
 	width: 100%;
 	height: 100vh;
-	background-image: url(/maintest/img/polynesia-3021072_1920.jpg);
+	background-image: url(../img/polynesia-3021072_1920.jpg);
 	background-size: cover;
 	text-align: center;
 	position: relative;
