mybatis-config typeAlias추가, mapper수정

--- a/maintest/src/main/webapp/WEB-INF/resources/css/packinglist/packingList.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/packinglist/packingList.css
@@ -26,6 +26,14 @@
 .default_list.tab_box_container>.list_buttons>input[type="button"] {
 	all: unset;
 }
+
+.default_list> .list_buttons{
+
+   position: absolute;
+    bottom: 0;
+
+}
+
 .default_list i,
 .user_list i{
 	cursor:pointer;
