--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/bType_Gallery.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/bType_Gallery.css
@@ -49,7 +49,7 @@ i.navbar_toggleBtn {
 .main_img {
   width: 100%;
   height: 50vh;
-  background: url(./img/polynesia-3021072_1920.jpg);
+  background: url(../../img/polynesia-3021072_1920.jpg);
   background-size: cover;
 }
 
