--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteFrm.css
@@ -22,9 +22,6 @@
         ul {
             list-style-type: none;
         }
-
-
-
         /* 작성 폼 css */
         label {
             display: inline-block;
@@ -32,14 +29,30 @@
         }
 
 
-        .content:nth-last-child() h3 {}
+       .content:nth-last-child() h3 {}
 
+
+.main_wrap section {
+  width: 100%;
+  margin: 0 auto;
+}
+
+  .main_wrap .section_wrap {
+    
+    
+  }
+  .main_wrap .section_wrap h2 {
+		margin-left:10px;'
+		width: 90%
+  }
 
 
 
         #writeFrm {
+            border-top: 2px solid #ff8080;    
             min-width: 400px;
-            margin: 50px;
+            margin: 10px;
+             width: 90%;            
         }
 
 
@@ -48,7 +61,7 @@
         }
 
         #writeFrm>ul {
-            width: 80%;
+           
             margin: 0 auto;
             padding: 0px;
         }
@@ -84,6 +97,18 @@
         grid-column:1/3;
             display: flex;
             justify-content: flex-end;
+        }
+        
+        
+#writeFrm>ul .btnGrp .btn {
+        border: 1px solid #ff8080;
+    color: #ff8080;
+    border-radius: 3px;
+    width: auto;
+    height: 25px;
+    margin-bottom: 5px;
+    margin-right:5px;
+    padding : 2px;
         }
 
         #writeFrm>ul .btnGrp button {
@@ -137,7 +162,7 @@
             margin-left: 5px;
             border: 1px solid grey;
             padding: 3px;
-            background-color: rgb(17, 16, 16);
+    				background-color: #eeeeee;
             box-shadow: 0 0 1px 0;
         }
         .img_wrap .img_content .thumbnail_wrapper .thumbnail {
@@ -167,5 +192,3 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);         
         }
-        
-        
