mypage ListingVO, MyListVO 하나로 통일, mypage SVC, DAO, mapper, controller 수정 리스트 페이지 수정

--- a/maintest/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/main.css
@@ -398,4 +398,9 @@ footer .footer_img img {
 	 	display: grid;
     grid-template-columns: repeat(2, 1fr);
 	}
+	section .createlist .default_list>.default_table{
+	 	width:100%;
+	 	display: grid;
+    grid-template-columns: repeat(2, 1fr);
+	}
 }
