--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyInner.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyInner.css
@@ -39,7 +39,7 @@
         }
 
 
-        .innerRe_wrapper .bcomment {
+        .innerRe_wrapper .bcomment_wrapper .bcomment {
             width: 100%;
             display: grid;
             grid-template-columns: repeat(1,minmax(20%, 80px) 1fr minmax(10%, 80px));
@@ -58,11 +58,18 @@
       
 
 		/* 작성자 인포 및 답글쓰기 layout */
-		 .innerRe_wrapper .bcomment .userinfo .udate ,
+	
         .innerRe_wrapper .bcomment .innerRe_area   {
             display: grid;
             grid-template-columns: 20% 1fr;
         }
+        
+        	 .innerRe_wrapper .bcomment .userinfo .udate {
+             display: grid;
+            grid-template-columns: 20% 20% 1fr;
+        	 }
+        
+        
             .innerRe_wrapper .bcomment .userinfo .udate .btn.reReply{
            border:none;
            background-color:white;
@@ -113,15 +120,14 @@
         } 
 
         /* 댓글 작성창 CSS */        
-         .innerRe_wrapper .filloutHere>.fillout{
-         	
+         .innerRe_wrapper .filloutHere.bcomment{
          	width: 100%;
             display: grid;
             grid-template-columns: minmax(20%, 80px) 1fr ;
          }
          
          
-         .innerRe_wrapper .filloutHere>.fillout .profile img {
+         .innerRe_wrapper .filloutHere.bcomment .profile img {
             vertical-align: middle;
             width: 70px;
             height: 70px;
@@ -129,45 +135,32 @@
             background-color: blueviolet;
         }
         
-        .innerRe_wrapper .filloutHere>.fillout .userinfo .typing {
+        .innerRe_wrapper .filloutHere.bcomment .userinfo .typing {
             border-bottom: 1px solid lightgray;
             min-height: 2em;
             padding: 10px;
         }
 
-        .innerRe_wrapper .filloutHere>.fillout .userinfo .typing:empty::before {
+        .innerRe_wrapper .filloutHere.bcomment .userinfo .typing:empty::before {
             content: attr(data-placeholder);
             display: block;
             color: lightgray;
         }
 
 
-	   .innerRe_wrapper .filloutHere>.fillout .userinfo .typing.disabled {
+	   .innerRe_wrapper .filloutHere.bcomment .userinfo .typing.disabled {
           font-weight: bold;
         }
 
-        .innerRe_wrapper .filloutHere>.fillout .userinfo .typing.typable {
+        .innerRe_wrapper .filloutHere.bcomment .userinfo .typable {
             border-bottom: 1px solid black;
         }
 
-
-
-
-
-        .innerRe_wrapper .filloutHere .userinfo .rbtnGrp.shown{
+        .innerRe_wrapper .filloutHere.bcomment .userinfo .rbtnGrp.shown{
             display: flex;
             justify-content: flex-end;
         }
 
-
-
-
-		/* inner 댓글의 댓글 */
-		.innerRe_wrapper .bcomment>.filloutHere {
-		display:grid;
-			grid-template-columns: 1/4;
-		
-		}
 
 
 
