--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReadFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReadFrm.css
@@ -32,11 +32,6 @@
         }
 
 
-        .content:nth-last-child() h3 {}
-
-
-
-
         #readModFrm {
             min-width: 400px;
             margin: 50px;
@@ -101,3 +96,203 @@
             grid-column: 1/3;
             border-collapse: collapse;
         }
+        
+        
+        /* ================================================== */
+        
+        .article {
+        
+        
+        width:100%;
+        }
+        
+        .acticle a, .acticle a:visited, .acticle a:hover {
+	text-decoration: none;
+}
+
+.acticle .acticle_wrap h3 {
+	margin: 0;
+	padding: 0;
+}
+
+.acticle .acticle_wrap {
+	
+	position: relative;
+	width: 860px;
+	top:20px;
+	margin: 0 auto;
+	font-size: 12px;
+}
+
+.acticle .acticle_wrap .article_contentBox {
+	padding: 29px 29px 0;
+	border: 1px solid #ebecef;
+	border-radius: 6px;
+}
+
+.acticle .acticle_wrap .article_contentBox .article_header {
+	position: relative;
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #ebecef;
+}
+
+.article_title {
+	margin-bottom: 12px;
+	font-size: 13px;
+}
+
+.article_title .link_board {
+	color: #03c75a;
+}
+
+.article_title .title_area {
+	margin-top: 7px;
+}
+
+.article_title .title_area .title_text {
+	font-weight: 400;
+	font-size: 26px;
+	word-break: break-all;
+	word-wrap: break-word;
+	word-break: break-word;
+}
+
+.writerInfo:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.writerInfo .profile_area {
+	margin-bottom: 6px;
+}
+
+.writerInfo .profile_info .nick_box {
+	display: inline-block;
+	position: relative;
+	vertical-align: top;
+}
+
+.writerInfo .article_info {
+	font-size: 12px;
+	line-height: 13px;
+	color: #979797;
+}
+
+.writerInfo .article_info .date {
+	margin-right: 8px;
+}
+
+
+.main_container {
+min-height:300px;
+}
+
+
+.comments_container {
+	margin-top: 20px;
+	border-top: 1px solid #ebecef;
+}
+
+.comments_container .comment_option {
+	position: relative;
+	padding-top: 16px;
+	margin-bottom: 11px;
+}
+
+.comments_container .comment_option .comment_title {
+	/* float: left; */
+	margin-top: 3px;
+	margin-right: 12px;
+	font-size: 17px;
+}
+
+.acticle .article_top_btn {
+	padding-bottom: 14px;
+}
+
+.acticle .article_bottom_btn {
+	padding-top: 14px;
+}
+
+.acticle .article_bottom_btn .left_area, .acticle .article_top_btn .left_area
+	{
+	float: left;
+}
+
+.acticle .article_bottom_btn .right_area, .acticle .article_top_btn .right_area
+	{
+	float: right;
+}
+
+.acticle .article_bottom_btn:after, .acticle .article_top_btn:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.acticle .article_btn:first-child {
+	margin-left: 0;
+}
+
+.AttachFileList, .AttachFileList .attach_file {
+	position: relative;
+}
+
+.AttachFileList {
+	margin: -2px 0 18px;
+	text-align: right;
+}
+
+.AttachFileList .button_file {
+	display: inline-block;
+	font-size: 13px;
+	color: #323232;
+}
+
+.AttachFileList .layer_attach {
+	overflow-y: auto;
+	position: absolute;
+	top: 100%;
+	right: 0;
+	z-index: 11;
+	max-width: 500px;
+	max-height: 416px;
+	margin-top: 6px;
+	padding: 10px 0;
+	border: 1px solid rgba(0, 0, 0, .06);
+	border-radius: 6px;
+	box-shadow: 0 1px 12px 0 rgba(0, 0, 0, .06);
+	background-color: #fff;
+	box-sizing: border-box;
+	color: #000;
+}
+
+.AttachFileListItem .file_name {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	display: block;
+	max-width: 100%;
+}
+
+.AttachFileListItem {
+	display: flex;
+	min-width: 100px;
+	height: 36px;
+	padding: 0 15px;
+	box-sizing: border-box;
+	font-size: 13px;
+	line-height: 37px;
+	white-space: nowrap;
+	color: #000;
+}
+
+.added_img {
+	display: block;
+	max-width: 500px;
+	margin: auto;
+}
+        
+        
