--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyInner.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReplyInner.css
@@ -172,14 +172,10 @@
         }
 
 
-
-
-	/* 버튼 CSS */
-        .innerRe_wrapper .bcomment .btn {
+	/*  showMoreBtn 버튼 CSS */
+        .innerRe_wrapper .btn.btn-showMore {
             border: 1px solid #ff8080;
-            color: #ff8080;
-            border-radius: 3px;
-            width: 50px;
-            height: 25px;
-            margin-bottom: 5px;
+      			width:100%;
+            border-radius: 3px;            
+            margin-top: 20px;
         }
