--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteModifyFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteModifyFrm.css
@@ -4,7 +4,6 @@ body {
 	margin: 0px;
 	font-family: "Noto Sans KR", sans-serif;
 	font-weight: 400px;
-
 }
 
 a {
@@ -36,15 +35,14 @@ label {
 
 #Frm {
 	min-width: 400px;
-	width:100%;
-	
+	width: 100%;
 }
 
 #Frm * {
 	box-sizing: border-box;
 }
 
-#Frm>ul{
+#Frm>ul {
 	width: 100%;
 	margin: 0 auto;
 	padding: 0px;
@@ -56,11 +54,10 @@ label {
 	grid-template-columns: minmax(100px, 10%) 1fr; */
 	margin-top: 5px;
 }
-#Frm>ul li>input{
+
+#Frm>ul li>input {
 	width: 100%;
-
 }
-
 
 #Frm>ul li .bound_error {
 	grid-column: 2/4;
@@ -77,7 +74,8 @@ label {
 }
 
 #Frm>ul .selectGrp>select {
-	margin-right : 5px;'
+	margin-right: 5px;
+	'
 }
 
 #Frm>ul .btnGrp {
@@ -86,22 +84,14 @@ label {
 	justify-content: flex-end;
 }
 
-
-
-
-
-
-
 #Frm>ul #bcontent_area {
 	grid-column: 1/3;
 	border-collapse: collapse;
 }
 
-
-#Frm>ul #bcontent_area:empty::before{	
-	content:attr(data-placeholder);
-	      color: lightgray;
-	
+#Frm>ul #bcontent_area:empty::before {
+	content: attr(data-placeholder);
+	color: lightgray;
 }
 
 #Frm  #files {
@@ -189,6 +179,14 @@ label {
 	outline: none
 }
 
+.content_area {
+	border: 2px solid #c5c5c5;
+	min-height: 600px;
+	margin-bottom: 20px;
+	outline: none;
+	padding-top: 5px
+}
+
 .toolbar_box {
 	padding: 2px 7px 3px;
 	background: #fbfbfb;
@@ -215,5 +213,7 @@ label {
 	display: block;
 	max-width: 500px;
 	margin: auto;
-}@charset "UTF-8";
+}
+
+@charset "UTF-8";
 }
