9/22 이미지 게시판 구현

--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteModifyFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteModifyFrm.css
@@ -98,6 +98,12 @@ label {
 	display: none;
 }
 
+
+#Frm  .content_area .img_file {
+	width: 500px;
+}
+
+
 /* 파일 첨부 영역 css  */
 .attachment label {
 	display: inline-block;
