--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReadFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardReadFrm.css
@@ -188,6 +188,23 @@
 .main_container {
 min-height:300px;
 }
+.main_container .article_viewer {
+	    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.main_container .article_viewer  div{
+ flex-wrap: row;
+	}
+
+
+.main_container .article_viewer .img_file{
+	max-width:500px;
+	max-height:500px;	
+	margin: 0px auto;
+}
 
 
 .comments_container {
