--- a/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteModifyFrm.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/board/boardWriteModifyFrm.css
@@ -99,6 +99,11 @@ label {
 }
 
 
+#Frm  .content_area{
+	
+	padding:20px;
+}
+
 #Frm  .content_area .img_file {
 	max-width: 500px;
 	max-height:500px;
