--- a/maintest/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/main.css
@@ -367,6 +367,7 @@ footer .footer_img img {
 	}
 	section .gallery_list ul li a {
 		display: inline-block;
+		width:100%
 	}
 	section .gallery_list ul .inner {
 		width: 25%;
