--- a/maintest/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/maintest/src/main/webapp/WEB-INF/resources/css/main.css
@@ -52,12 +52,21 @@ i.navbar_toggleBtn {
 }
 
 .main_img span {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: white;
-	font-size: 3em;
+
+	    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 5em;
+    font-weight: bold;
+    border: 13px solid #FF8080;
+    padding: 10px;
+    padding-bottom: 20px;
+    background-color: rgba(0,0,0,0.2);
+}
+	
+	
 }
 
 .scroll {
